--- a/index.html
+++ b/index.html
@@ -1650,7 +1650,7 @@
         <div class="invitation-card" id="invitationCard">
             <div class="card-front">
                 <div class="card-seal">
-                    <h1 class="initials">M & V</h1>
+                    <h1 class="initials">Michelle & Victor</h1>
                 </div>
                 <h3 class="mt-4" style="font-weight: 300; letter-spacing: 0.1em;">WEDDING INVITATION</h3>
                 <p class="mt-3" style="color: var(--rustic-brown); max-width: 300px; font-size: 1.1rem;">You are cordially invited to celebrate our union on October 28, 2027</p>
@@ -2312,3 +2312,4 @@
     </script>
 </body>
 </html>
+
