--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --royal-blue: #13274F;
+            --royal-blue: #ADD8E6;
             --royal-blue-light: #1E3A8A;
             --royal-blue-dark: #0A1A3A;
             --cream: #F9F6F0;
@@ -2312,5 +2312,6 @@
     </script>
 </body>
 </html>
+
 
 
