--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --royal-blue: #ADD8E6;
-            --royal-blue-light: #1E3A8A;
-            --royal-blue-dark: #ADD8E6;
+            --royal-blue: #4169E1;        /* Rich royal blue */
+            --royal-blue-light: #6495ED;   /* Lighter royal blue */
+            --royal-blue-dark: #1E3A8A;    /* Darker royal blue */
             --cream: #F9F6F0;
             --gold: #D4AF37;
             --gold-light: #E8D9A0;
             --rustic-brown: #8B7355;
-            --shadow: rgba(19, 39, 79, 0.2);
+            --shadow: rgba(30, 58, 138, 0.2);
         }
 
         * {
@@ -2312,6 +2312,7 @@
     </script>
 </body>
 </html>
+
 
 
 
